--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                 <h2>Login</h2>
                 <form>
                     <div class="inputbx">
-                        <span>Username</span>
-                        <input type="text" name="">
+                        <span>Email</span>
+                        <input type="text" placeholder="Enter email" name="">
                     </div>
                     <div class="inputbx">
                         <span>Password</span>
-                        <input type="password" name="">
+                        <input type="password" placeholder="Enter password" name="">
                     </div>
                     <div class="rememb">
                         <label> <input type="checkbox" name=""> Remember </label>
